@@ -301,38 +301,17 @@ sub _get_reference_genome_path{
 
 =head2 library_type 
 
-WTSI::DNAP::Warehouse::Schema::Result::IseqFlowcell  (alias default_library_type = pipeline_id_lims) 
 
 =cut
 
 has 'library_type' => (
      isa           => q[Str],
      is            => q[ro],
-     predicate     => '_has_library_type',
-     writer        => '_set_library_type',
-     documentation => q[For adding to iRODS merged cram meta data, default pipeline_id_lims],
+     required      => 1,
+     documentation => q[iseq_flowcell.pipeline_id_lims with alias default_library_type in WTSI::DNAP::Warehouse::Schema::Result::IseqFlowcell. Libraries with library_type Chromium genome are skipped],
     );
 
-sub _get_library_type{
-    my ($self, $c) = @_;
 
-    if (!$c) {
-       croak 'Component attribute required';
-    }
-    $self->log(join q[ ], 'IN library_type', $c->freeze());
-
-    my $l=st::api::lims->new(
-        driver_type=>q[ml_warehouse_fc_cache],
-        id_run => $c->id_run(),
-        position => $c->position(),
-        tag_index => $c->tag_index());
-
-   if ($self->study_id() ne $l->study_id()){ croak q{Study id does not match }, $self->study_id(),q{},$l->st
-   }
-
-   return $l->library_type;
-
-}
 
 =head2 instrument_type
 
@@ -1097,13 +1076,6 @@ sub irods_data_to_add {
        next if ! $suffix;
        $data->{$file} = {'type' => $suffix};
     }
-
-    foreach my $c ($self->composition->components_list()) {
-        my $library_type = $self->_has_library_type  ? $self->library_type : $self->_get_library_type($c);
-        if (!$self->_has_library_type) {
-            $self->_set_library_type($library_type);
-        }
-     }
 
     ## set meta data for cram file
     $data->{$merged_name.q[.cram]} = {
