@@ -1,5 +1,6 @@
 ChangeLog 
 ==========
+- enabling skipping of Chromium genome library_type 
 - test script and data files to run full test merge run (phix)
 - tokens_per_job can now be used from the daemon config
 
